[package]
name = "vant_crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vant_crypto"

[dependencies]
solana-program = "=2.1.21"
borsh = "1"

[dev-dependencies]
solana-program-test = "=2.1.21"
solana-sdk = "=2.1.21"
tokio = { version = "1", features = ["full"] }

[features]
no-entrypoint = []

[profile.release]
overflow-checks = true
lto = "thin"
opt-level = 3
codegen-units = 1
